# Setzer

./: .editorconfig  .gitignore  COPYING  LICENSE  README.md  __main__.py  meson.build  org.cvfosammmm.Setzer.json  setzer.in
.github/: FUNDING.yml
app/: service_locator.py  settings.py
backend/: backend.py
controller/: controller_document.py  controller_document_autocomplete.py  controller_document_search.py  controller_document_wizard.py  controller_preview.py  controller_settings.py  controller_shortcuts.py  controller_sidebar.py  controller_workspace.py
data/: meson.build  org.cvfosammmm.Setzer.appdata.xml  org.cvfosammmm.Setzer.appdata.xml.in  org.cvfosammmm.Setzer.desktop  org.cvfosammmm.Setzer.metainfo.xml.in  org.cvfosammmm.Setzer.mime.xml  setzer.1  setzer.1.in
data/resources/: style_gtk.css
data/resources/completion/: general.xml
data/resources/gtksourceview/language-specs/: R.lang  lang_v1_to_v2.xslt  language-specs.its  language-specs.pot  latex.lang
data/resources/gtksourceview/styles/: default-dark.xml  default.xml  setzer-dark.xml  setzer.xml
data/resources/help/: latex2e_0.html  latex2e_1.html  latex2e_10.html  latex2e_11.html  latex2e_12.html  latex2e_13.html  latex2e_14.html  latex2e_15.html  latex2e_16.html  latex2e_17.html  latex2e_18.html  latex2e_19.html  latex2e_2.html  latex2e_20.html  latex2e_21.html  latex2e_22.html  latex2e_23.html  latex2e_24.html  latex2e_25.html  latex2e_26.html  latex2e_27.html  latex2e_28.html  latex2e_29.html  latex2e_3.html  latex2e_30.html  latex2e_4.html  latex2e_5.html  latex2e_6.html  latex2e_7.html  latex2e_8.html  latex2e_9.html  latex2e_unofficial_reference_manual_october_2018  search_index.pickle
data/resources/language-specs/: language-specs.pot  latex.lang
data/resources/latexdb/commands/: additional.xml  amsbsy.xml  amsfonts.xml  amsmath.xml  amsopn.xml  amssymb.xml  amsthm.xml  beamer.xml  color.xml  dynamic.xml  general.xml  geometry.xml  glossaries.xml  graphicx.xml  hyperref.xml  latex-dev.xml  latex-document.xml  tex.xml  textcomp.xml  url.xml
data/resources/latexdb/languages/: languages.xml
data/resources/symbols/: misc_math.xml  misc_text.xml
data/resources/themes/: default-dark.css  default-dark.xml  default.css  default.xml
dialogs/: dialog.py  dialog_provider.py
dialogs/about/: about.py
dialogs/add_remove_packages/: add_remove_packages.py
dialogs/bibtex_wizard/: bibtex_wizard.py
dialogs/build_save/: build_save.py
dialogs/building_failed/: building_failed.py
dialogs/close_confirmation/: close_confirmation.py
dialogs/document_changed_on_disk/: document_changed_on_disk.py
dialogs/document_wizard/: document_wizard.py  document_wizard_viewgtk.py
dialogs/include_bibtex_file/: include_bibtex_file.py  include_bibtex_file_viewgtk.py
dialogs/include_latex_file/: include_latex_file.py  include_latex_file_viewgtk.py
dialogs/interpreter_missing/: interpreter_missing.py
dialogs/keyboard_shortcuts/: shortcuts_window.ui
dialogs/open_document/: open_document.py
dialogs/preferences/: preferences.py  preferences_viewgtk.py
dialogs/replace_confirmation/: replace_confirmation.py
dialogs/save_document/: save_document.py
dialogs/spellchecking_language/: spellchecking_language.py
document/: document.py  document_builder.py  document_controller.py  document_presenter.py  document_viewgtk.py
document/autocomplete/: autocomplete.py  autocomplete_viewgtk.py
document/build_log/: build_log.py  build_log_presenter.py  build_log_viewgtk.py
document/build_system/: build_system.py
document/build_widget/: build_widget.py  build_widget_viewgtk.py
document/code_folding/: code_folding.py  code_folding_presenter.py  code_folding_viewgtk.py
document/document_switcher_item/: document_switcher_item.py  document_switcher_item_presenter.py  document_switcher_item_viewgtk.py
document/parser/: bibtex_parser.py  latex_parser.py
document/preview/: preview.py  preview_presenter.py
document/search/: search.py
document/shortcutsbar/: shortcutsbar_presenter.py  shortcutsbar_viewgtk.py
document/spellchecker/: spellchecker.py
document/state_manager/: state_manager_latex.py
helpers/: helpers.py  observable.py  popover_menu_builder.py  service_locator.py
model/: model_buildlog.py  model_document.py  model_workspace.py
po/: LINGUAS  POTFILES  README.md  de.po  es.po  fr.po  generate-potfiles.sh  it.po  meson.build  pt_BR.po  setzer.its  setzer.pot  vi.po  zh_CN.po  zh_Hans.po
resources/: org.cvfosammmm.Setzer.appdata.xml  org.cvfosammmm.Setzer.desktop  style_gtk.css
resources/symbols/: arrows.xml  delimiters.xml  greek_letters.xml  misc_math.xml  misc_text.xml  operators.xml  relations.xml
scripts/: generate_symbols.py  setzer.dev
setzer/app/: color_manager.py  font_manager.py  forward_sync_manager.py  latex_db.py  service_locator.py  settings.py
setzer/dialogs/: dialog.py  dialog_locator.py
setzer/document/: document.py  document_bibtex.py  document_builder.py  document_controller.py  document_latex.py  document_latex_cls.py  document_latex_sty.py  document_other.py  document_presenter.py  document_viewgtk.py
setzer/helpers/: drawing.py  observable.py  path.py  popover_menu_builder.py  timer.py
setzer/keyboard_shortcuts/: shortcut_controller.py  shortcut_controller_app.py  shortcut_controller_document.py  shortcut_controller_latex.py  shortcuts.py
setzer/popovers/: popover_manager.py
setzer/resources/: style_gtk.css
setzer/resources/gtksourceview/language-specs/: Makefile.am  def.lang  latex-custom.lang
setzer/settings/: document_settings.py  settings.py
setzer/workspace/: workspace.py  workspace_controller.py  (+2 more)
tests/: meson.build
viewgtk/: viewgtk.py  viewgtk_dialogs.py  viewgtk_dialogs_document_wizard.py  viewgtk_dialogs_preferences.py  viewgtk_document.py  viewgtk_document_buildlog.py  viewgtk_document_buildwidget.py  viewgtk_document_search.py  viewgtk_headerbar.py  viewgtk_preview.py  viewgtk_shortcutsbar.py  viewgtk_sidebar.py
workspace/: workspace.py  workspace_controller.py  workspace_presenter.py  workspace_viewgtk.py
(+300 files in other folders)
